# bpmn-cpp-lib-2

./: .gitignore  CMakeLists.txt  README.md  bpmn-cpp-lib.cpp  bpmn-cpp-lib.h  map.txt  vcpkg.json
examples/demo/: main.cpp
include/bpmn/: container.h  engine.h  execution_state_fwd.h  executor.h  flowAbstract.h  model.h  parser.h
include/bpmn/services/: abstractService.h  service.h  serviceFactory.h
include/db/: config.h  orm.h
include/db/models/: form.h  process.h
src/bpmn/: engine.cpp  executor.cpp  model.cpp  parser.cpp
src/bpmn/services/: abstractService.cpp
src/db/: config.cpp  iservice.cpp  orm.cpp
src/db/models/: form.cpp  process.cpp
tests/integration/: test_engine.cpp
tests/unit/: test_executor.cpp  test_parser.cpp
